<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etName"
                android:autofillHints="name"
                android:hint="@string/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:inputType="text" />

            <EditText
                android:id="@+id/etCity"
                android:autofillHints="addressCity"
                android:hint="@string/city"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:inputType="text" />

            <EditText
                android:id="@+id/etRegion"
                android:autofillHints="addressState"
                android:hint="@string/region"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:inputType="text"/>

            <EditText
                android:id="@+id/etDetails"
                android:autofillHints="addressStreet"
                android:hint="@string/street_details"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:inputType="text"/>

            <EditText
                android:id="@+id/etNotes"
                android:autofillHints="addressLine2"
                android:hint="@string/notes_optional"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:inputType="text"/>

            <CheckBox
                android:id="@+id/checkboxDefaultAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checked="false"
                android:text="@string/set_as_default"/>

            <Button
                android:id="@+id/btnAddAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_address" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>


</layout>
